[metadata]
name = pynix 
version = 0.0.1
author = Adam McCartney
author_email = adam.mccartney@tuwien.ac.at
description = A tool for onboarding developers
long_description = README.md
requires-python = >=3.9
license = GPL
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Operating System :: Linux, Unix

[options]
package_dir=
    =src
include_package_data=True

[options.packages.find]
where=pynix

[options.entry_points]
console_scripts =
    pynix = cli:main

